Closed Bug 334928 Opened 19 years ago Closed 19 years ago

overlapping text when using Hebrew text with style: letter-spacing: 1px

Categories

(Core :: Layout: Text and Fonts, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla1.9alpha1

People

(Reporter: nir123, Assigned: masayuki)

References

Details

(Keywords: regression, testcase)

Attachments

(5 files, 1 obsolete file)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20060420 Minefield/3.0a1 Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20060420 Minefield/3.0a1 The text is being displayed incorrectly and there is not enough space between the letters when using style: letter-spacing: 1px. Testcase is coming. Reproducible: Always
Attached file Testcase
I've checked this on trunk version build 20060222 and the bug does not occur. Therefore, it's regressed bug.
Keywords: regression, testcase
Screenshot: as it should be.
Confirming based on screenshots.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Uri, does comment 5 imply that you can't reproduce on Mac? I can't reproduce on Linux. A tighter regression window would be really helpful here.
I reproduced on build 20060226 but I could not reproduced on build 20060222. Does it imply this is Cairo-related?
Please IGNORE comment #7. I posted it here instead of posting it in another bug report. I appologize. I've checked with build 20060226 and the text is not overlapping but when selecting the text, there are some gaps between the letters. I'll add screenshot.
(In reply to comment #6) > Uri, does comment 5 imply that you can't reproduce on Mac? Correct. Sorry I didn't say this outright. > A tighter regression window would be really helpful here. Indeed. Unfortunately I can't help. Nir - can you try later builds and see when this started?
I could not reproduce it on build 20060220. Is it tight enough? If not, I'll check more builds. Nir.
(In reply to comment #11) > I could not reproduce it on build 20060220. > Is it tight enough? > If not, I'll check more builds. > Nir. > You said earlier (comment #8) that you can't see the original problem (overlapping text) with 20060226. We need a better regression range for that problem, as it seems what we have now is only: 20060226 - OK (no overlapping text) 20060420 - broken Let's deal with the selection issue later (perhaps in a separate bug).
Well, if I ignore the selection issue I get this: 20060407 - no overlapping text. 20060408 - broken (overlapping text as described in this bug).
Flags: blocking1.9a1?
Currently, we don't support grapheme cluster level text layout.(This is same as non-Cairo build.) I think that we need to fix bug 333659 for this problem. # I think that this is not a regression. Because pre bug 327184, the letter-spacing doesn't have any effect.
(In reply to comment #15) > Currently, we don't support grapheme cluster level text layout.(This is same as > non-Cairo build.) I think that we need to fix bug 333659 for this problem. > I don't see what this has to do with grapheme clusters. The tetscase only contains simple, standalone, letters. > # I think that this is not a regression. Because pre bug 327184, the > letter-spacing doesn't have any effect. > No thaving any effect is still much better than distorting the text, making it hardly legible. So I certainly consider this a regression (and one which should be fixed prior to any release).
(In reply to comment #16) > (In reply to comment #15) > > Currently, we don't support grapheme cluster level text layout.(This is same as > > non-Cairo build.) I think that we need to fix bug 333659 for this problem. > > > > I don't see what this has to do with grapheme clusters. The tetscase only > contains simple, standalone, letters. Ah, O.K. I confirmed it. I'll check the code for 'simple' RTL text.
Attached patch Patch rv1.0 (obsolete) — Splinter Review
simple fix.
Assignee: nobody → masayuki
Status: NEW → ASSIGNED
Attachment #219516 - Flags: review?(pavlov)
Attached patch Patch rv1.1Splinter Review
this is better, sorry.
Attachment #219516 - Attachment is obsolete: true
Attachment #219517 - Flags: review?(pavlov)
Attachment #219516 - Flags: review?(pavlov)
Stuart: Would you review the patch?
Comment on attachment 219517 [details] [diff] [review] Patch rv1.1 oops, thought i had r='d this one
Attachment #219517 - Flags: review?(pavlov) → review+
checked-in.
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Flags: blocking1.9a1?
Target Milestone: --- → mozilla1.9alpha
Verified with: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20060805 Minefield/3.0a1 on Windows XP.
Status: RESOLVED → VERIFIED
Component: Layout: BiDi Hebrew & Arabic → Layout: Text
QA Contact: layout.bidi → layout.fonts-and-text
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: