Bug 334928 overlapping text when using Hebrew text with style: letter-spacing: 1px r=pavlov